--- a/index.css
+++ b/index.css
@@ -93,15 +93,15 @@ nav a {
 }
 
 .quote-section {
-    background-color: #bdc3c7;
+    background-color: #e5e7eb;
     text-align: center;
     padding: 50px 20px;
-    font-style: italic;
+    font-style: light italic;
 }
 
 .quote-section cite {
     display: block;
-    font-size: 18px;
+    font-size: 36px;
     margin-bottom: 10px;
 }
 
